--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-session",
+  "name": "@ghprud/express-session",
   "version": "1.17.2",
   "description": "Simple session middleware for Express",
   "author": "TJ Holowaychuk <tj@vision-media.ca> (http://tjholowaychuk.com)",
@@ -7,7 +7,7 @@
     "Douglas Christopher Wilson <doug@somethingdoug.com>",
     "Joe Wagner <njwjs722@gmail.com>"
   ],
-  "repository": "expressjs/session",
+  "repository": "ghprud/session",
   "license": "MIT",
   "dependencies": {
     "cookie": "0.4.1",
@@ -23,9 +23,9 @@
     "after": "0.8.2",
     "cookie-parser": "1.4.5",
     "eslint": "7.26.0",
-    "eslint-plugin-markdown": "2.1.0",
+    "eslint-plugin-markdown": "^2.2.1",
     "express": "4.17.1",
-    "mocha": "8.4.0",
+    "mocha": "^9.1.3",
     "nyc": "15.1.0",
     "supertest": "6.1.3"
   },
